--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://hainguyenthanh01.github.io/haint_mobion_shortvideo",
   "name": "mobion-shortvideo-web",
   "version": "0.1.0",
   "private": true,
@@ -37,6 +38,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "mobion_short -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
